--- a/app/assets/stylesheets/base/_inputs.scss
+++ b/app/assets/stylesheets/base/_inputs.scss
@@ -1,5 +1,17 @@
 .input-list {
-  h1, h2, h3, h4, h5, h6 { margin-bottom: 4px; }
+
+  &.hax {
+    select,
+    input[type=text],
+    input[type=email],
+    input[type=password],
+    input[type=tel],
+    textarea {
+      border-top: none !important;
+      border-right: none !important;
+      background-color: beige !important;
+    }
+  }
 
   label { 
     color: #555; 
