--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -7,7 +7,7 @@ Sign Up
   </div>
 
 
-<div class="input-list center" style="max-width:350px;">
+<div class="input-list hax center" style="max-width:350px;">
 
   <div class="sign-up-page-deal">
     <h4 class="SSS bold">Limited time offer</h4>
@@ -17,14 +17,20 @@ Sign Up
   <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
     <%= devise_error_messages! %>
 
-    <%= f.text_field :name, :placeholder => 'Name' ,:autofocus => true %>
-    <%= f.text_field :number, :placeholder => 'Phone Number' %>
-    <%= f.email_field :email, :placeholder => 'Email Address' %>
+    <label>Name</label>
+    <%= f.text_field :name, :placeholder => '' ,:autofocus => true %>
+
+    <label>Email</label>
+    <%= f.email_field :email, :placeholder => 'you will use this to login' %>
+
+    <label>Phone Number</label>
+    <%= f.text_field :number, :placeholder => 'to notify you via text when your order is ready' %>
+    <i></i>
 
     <%= f.password_field :password, :placeholder => 'Password' %>
     <%= f.password_field :password_confirmation, :placeholder => 'Password Confirmation' %>
 
-    <%= f.submit "Sign up", :class => "push-btn darkslategray mar-bottom" %>
+    <%= f.submit "Sign up", :class => "push-btn mar-bottom" %>
   <% end %>
 
   <%= render "devise/shared/links" %>
