better vendor buttons

--- a/app/views/application/styleguide.html.erb
+++ b/app/views/application/styleguide.html.erb
@@ -56,10 +56,10 @@
         <hr>
 
         <button class="action-btn">Action Button</button>
-        <button class="action-btn red">Action</button>
-        <button class="action-btn brown">Action Button</button>
-        <button class="action-btn green">Action</button>
-        <button class="action-btn blue">Action Button</button>
+        <button class="action-btn red one">Action</button>
+        <button class="action-btn brown three">Action Button</button>
+        <button class="action-btn green one">Action</button>
+        <button class="action-btn blue three">Action Button</button>
         <button class="action-btn darkseagreen">Action</button>
         <button class="action-btn lightgreen">Action Button</button>
         <button class="action-btn darkgreen">Action</button>
