--- a/app/assets/stylesheets/modules/buttons.css.scss
+++ b/app/assets/stylesheets/modules/buttons.css.scss
@@ -5,10 +5,11 @@
   padding: 9px 18px;
   font-weight: 800;
   border-radius: 20px;
+  text-align: left;
   border: 1px solid #D5D5D5;
 
   &:hover {
-    background-color: darken(#E5E5E5, 5%);
+    background-color: whitesmoke;
   }
 
 }
