--- a/app/assets/stylesheets/modules/navs.css.scss
+++ b/app/assets/stylesheets/modules/navs.css.scss
@@ -1,5 +1,6 @@
 @import "base/vars";
 
+/*  dont take this seriously 
 nav.management {
   margin-bottom: 45px;
   text-align: center;
@@ -14,7 +15,7 @@ nav.management {
     }
   }
 }
-
+ */
 
 .stick {
     position: fixed;
