basic new look, NEXT style the mods

--- a/app/assets/stylesheets/_grid.scss
+++ b/app/assets/stylesheets/_grid.scss
@@ -50,17 +50,17 @@
 .twelve, .row-new .twelve { width: 100%; }
 
 .row-new .offset-by-one { margin-left: 8.33333%; }
-.row-new .offset-by-two { width: 16.66667%; }
-.row-new .offset-by-three { width: 25%; }
-.row-new .offset-by-four { width: 33.33333%; }
-.row-new .offset-by-five { width: 41.66667%; }
-.row-new .offset-by-six { width: 50%; }
-.row-new .offset-by-seven { width: 58.33333%; }
-.row-new .offset-by-eight { width: 66.66667%; }
-.row-new .offset-by-nine { width: 75%; }
-.row-new .offset-by-ten { width: 83.33333%; }
-.row-new .offset-by-eleven { width: 91.66667%; }
-.row-new .offset-by-twelve { width: 100%; }
+.row-new .offset-by-two { margin-left: 16.66667%; }
+.row-new .offset-by-three { margin-left: 25%; }
+.row-new .offset-by-four { margin-left: 33.33333%; }
+.row-new .offset-by-five { margin-left: 41.66667%; }
+.row-new .offset-by-six { margin-left: 50%; }
+.row-new .offset-by-seven { margin-left: 58.33333%; }
+.row-new .offset-by-eight { margin-left: 66.66667%; }
+.row-new .offset-by-nine { margin-left: 75%; }
+.row-new .offset-by-ten { margin-left: 83.33333%; }
+.row-new .offset-by-eleven { margin-left: 91.66667%; }
+.row-new .offset-by-twelve { margin-left: 100%; }
 
 .row-new-ib {
   max-width: 1200px;
