--- a/app/assets/stylesheets/base/_inputs.scss
+++ b/app/assets/stylesheets/base/_inputs.scss
@@ -162,8 +162,9 @@ input.radio.charges {
   display: inline-block;
 }
 
-input.form-control {
+/* input.form-control {
   border-radius: 0px;
   margin-bottom:5px;
 }
 
+ */
