--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,8 +1,8 @@
 <%= render 'top_nav' %>
 
-<h2 class="SSS">My Restaurant</h2>
+<h2>My Restaurant</h2>
 <div class="row-new well">
-	<h4 class="SSS pad-bot">Current Revenue Status</h4>
+	<h4 class="pad-bot">Current Revenue Status</h4>
 	<div class="column-mobile six clear-fix">
 		<strong> Amount Available: </strong> <%= Order.integer_to_currency @amount %>
 		<br />
@@ -12,7 +12,7 @@
 
 <% if current_user.is_super? %>
 	<section class="wrapper pad-y-xlrg">
-		<h4 class="SSS">Managers</h4>
+		<h4>Managers</h4>
 
 		<% @restaurant.roles.each do |role| %>
 			<div> <%= role.user.email %> </div>
@@ -30,11 +30,11 @@
 
 
 <section class="my-well-lemon">
-	<h4 class="SSS">Registration Code:</h4>
+	<h4>Registration Code:</h4>
 	<%= @restaurant.registration_code %> <%= link_to "Generate new code", new_registration_code_restaurant_path(@restaurant) %>
 	<br /><br />
-	<h4 class="SSS">Add Tax? <span class="tax">- <%= @restaurant.add_tax %></span></h4>
-	<h4 class="SSS">Tax: <span class="tax"><%= @restaurant.tax %></span></h4>
+	<h4>Add Tax? <span class="tax">- <%= @restaurant.add_tax %></span></h4>
+	<h4>Tax: <span class="tax"><%= @restaurant.tax %></span></h4>
 	<br />
 
 	<%= link_to "Edit Restaurant", edit_restaurant_path(@restaurant), class: "action-btn" %>
