--- a/app/views/menu/edit_item.html.erb
+++ b/app/views/menu/edit_item.html.erb
@@ -1,11 +1,34 @@
 <%= form_for @item, url: {:controller => "menu", :action => "update_item", :item_id => @item.id}, :method => "post"  do |f| %>
 	<%= f.label :name %>
-	<%= f.text_field :name %>
+	<%= f.text_field :name, :class => "form-control" %>
 
 	<br />
 	<%= f.label :description %>
-	<%= f.text_area :description %>
+	<%= f.text_area :description, :class => "form-control", :style => "height: 100px;" %>
 	<br />
+
+	<%= f.label :price %>
+	<%= f.text_field :price, :class => "form-control" %>
 
 	<%= f.submit %>
 <% end %>
+<div class="well mar-top">
+<h4 class="SSS">This item has <%= @item.modifiers.count %> Modifiers</h4>
+
+<% @item.modifiers.each do |modifier| %>
+	<div class="modifier">
+		<span class="type"><%= modifier.type_string %> </span>
+		<span class="name"><%= modifier.name %></span>
+		<% modifier.options.each do |option| %>
+			<div class="option">
+				<span class="name"> <%= option.name %> </span>
+				<span class="price"> <%= Order.integer_to_currency option.price %> </span>
+
+			</div>
+		<% end %>
+				<%= link_to 'Edit', '#' %>
+	</div>
+<% end %>
+	<%= link_to 'Add A Modifier', '#' %>
+
+</div>
