you can now add many modifiers

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -31,7 +31,7 @@
         "components/*",
         "base/colors";
 
-@import "charges", "orders", "sign_in";
+@import "charges", "orders", "sign_in", "manage_vendors";
 @import "animate", "utilities", "custom-resizing";
 
 
