--- a/app/assets/stylesheets/components/the-menu.css.scss
+++ b/app/assets/stylesheets/components/the-menu.css.scss
@@ -38,6 +38,11 @@
     }
   }
 }
+.item-details {
+    display:block;
+      color: #888;
+      font-size: .92em;
+}
 
 /* on orders new but not in the menu */
 .money-wrap {
