--- a/app/views/restaurants/my_menu.html.erb
+++ b/app/views/restaurants/my_menu.html.erb
@@ -34,8 +34,8 @@
       <button type="button" id="multiple_select_mod_btn" data-mod-type="multiple">Add a multi select option to item</button>
       <%= render 'new_item_multiple_select' %>
 
-      <button type="button" id="mod_btn" data-mod-type="custom" disabled="disabled">Add a custom option to item</button>
-
+<!--       <button type="button" id="mod_btn" data-mod-type="custom" disabled="disabled">Add a custom option to item</button>
+ -->
       </td>
     </tr>
     <tr colspan="3"> <td> <%= f.submit 'Ceate new item', :class=>"push-btn" %></td> </tr>
