--- a/app/views/user_mailer/announcement_email.html.erb
+++ b/app/views/user_mailer/announcement_email.html.erb
@@ -4,6 +4,8 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
+    
+    <%= image_tag %>
     <h4>Hello fellow Shnackers!</h4>
 
     <p>First, we would like to <i>thank you</i> for using Shnack. We appreciate you being one of the first group of people to use our app at Caje. Its been quite the ride and we have loved helping you never wait in line again!</p>
@@ -14,11 +16,12 @@
     <p>Get your Shnack on and order dishes like Clam Chowder or the Mac Daddy at your convenience without ever having to wait in line.</p>
 
     <p>Your Shnack credit will be available to be used at Buddha Bowls as well.</p>
+
     <a href="<%= @bb_url %>" target="_blank">Click here to start your order now</a>
 
     <p>Keep Calm and Shnack On,
     <br />
-    -Team Shnack
+    Team Shnack
     <br />
     <a href="https://www.shnackapp.com" target="_blank">www.shnackapp.com</a>
     </p>
