--- a/app/views/user_mailer/announcement_email.html.erb
+++ b/app/views/user_mailer/announcement_email.html.erb
@@ -48,7 +48,8 @@
     </style>
 
     <div class="spanspan">
-      <%= image_tag "BuddhaBowlsNow.png", alt: "Buddha Bowls with Shnack" %>
+      <% byebug %>
+      <%= image_tag attachments["BuddhaBowlsNow.png"].url, alt: "Buddha Bowls with Shnack" %>
       <h2>Hello fellow Shnackers!</h2>
 
       <p>First, we would like to <i>thank you</i> for using Shnack. We appreciate you being one of the first group of people to use our app at Caje. Its been quite the ride and we have loved helping you never wait in line again!</p>
