--- a/app/assets/stylesheets/modules/input-list.css.scss
+++ b/app/assets/stylesheets/modules/input-list.css.scss
@@ -1,4 +1,6 @@
 .input-list {
+
+  //majority
   select,
   input[type=text],
   input[type=email],
@@ -10,6 +12,7 @@
     margin: 0px 3px 8px 3px;
   }
 
+  //box-like
   select,
   input[type=text],
   input[type=email],
@@ -23,6 +26,7 @@
     }
   }
 
+  //bullet-like
   //QQQ necessary???
   label > input[type=checkbox],
   label > input[type=radio] {
@@ -32,16 +36,23 @@
 
 
 .input-list-double {
+  @extend .row-new;
+
+  //box-like
   select,
   input[type=text],
   input[type=email],
   input[type=password],
   input[type=tel],
-  input[type=number] {
+  input[type=number],
+  textarea {
     @extend .column;
-    @extend .six;
     margin: 3px;
     width: calc(50% - 6px);
+  }
+
+  p {
+    margin-bottom: 0px;
   }
 }
 
@@ -53,13 +64,15 @@
   input[type=email],
   input[type=password],
   input[type=tel],
+  input[type=number],
   textarea {
-    border-top: none;
-    border-right: none;
+    border-top: hidden;
+    border-right: hidden;
     background-color: beige;
 
     &:hover {
-      
+      border-top: visible;
+      border-right: visible;
     }
   }
 }
