--- a/app/views/application/styleguide.html.erb
+++ b/app/views/application/styleguide.html.erb
@@ -126,6 +126,7 @@
       <span class="fa fa-info-circle"></span>
 
       <label>Basic:</label>
+      <span>bullshit</span>
       <input type="text" placeholder="Fill me in!"/>
 
       <label>
@@ -166,6 +167,9 @@
 
       <input type="text" class="error" />
 
+      <input type="text" placeholder="Fill me in!"/>
+      <input type="text" placeholder="Fill me in!"/>
+      <input type="text" placeholder="Fill me in!"/>
       <input type="text" placeholder="Fill me in!"/>
 
       <label>
@@ -240,17 +244,17 @@
       <hr>
 
       <div class="span1 cement">S Sp Spa Span Span1</div>
-      <div class="span2 cement">Span Span2</div>
-      <div class="span3 cement">Span Span3</div>
-      <div class="span4 cement">Span Span4</div>
-      <div class="span5 cement">Span Span5</div>
-      <div class="span6 cement">Span Span6</div>
-      <div class="span7 cement">Span Span7</div>
-      <div class="span8 cement">Span Span8</div>
-      <div class="span9 cement">Span Span9</div>
-      <div class="span10 cement">Span Span10</div>
-      <div class="span11 cement">Span Span11</div>
-      <div class="span12 cement">Span Span12</div>
+      <div class="span2 cement">Span2</div>
+      <div class="span3 cement">Span3</div>
+      <div class="span4 cement">Span4 max-width: 360</div>
+      <div class="span5 cement">Span5</div>
+      <div class="span6 cement">Span6 max-width: 540</div>
+      <div class="span7 cement">Span7</div>
+      <div class="span8 cement">Span8</div>
+      <div class="span9 cement">Span9</div>
+      <div class="span10 cement">Span10</div>
+      <div class="span11 cement">Span11</div>
+      <div class="span12 cement">Span12 max-width: 1080</div>
 
 
       <hr>
