--- a/app/assets/stylesheets/modules/input-list.css.scss
+++ b/app/assets/stylesheets/modules/input-list.css.scss
@@ -6,18 +6,22 @@
   input[type=email],
   input[type=password],
   input[type=tel],
+  input[type=number],
+  input[type=search],
   textarea,
   input[type=checkbox],
   input[type=radio] {
     margin: 0px 3px 8px 3px;
   }
 
-  //box-like
+  //box-like elements
   select,
   input[type=text],
   input[type=email],
   input[type=password],
   input[type=tel],
+  input[type=number],
+  input[type=search],
   textarea {
     width: calc(100% - 6px);
 
@@ -32,6 +36,14 @@
   label > input[type=radio] {
     display: inline-block;
   }
+
+  p {
+    margin-bottom: 0px;
+  }
+
+  h2 {
+    font-size: 21px;
+  }
 }
 
 
@@ -45,6 +57,7 @@
   input[type=password],
   input[type=tel],
   input[type=number],
+  input[type=search],
   textarea {
     @extend .column;
     margin: 3px;
@@ -53,6 +66,10 @@
 
   p {
     margin-bottom: 0px;
+  }
+
+  h2 {
+    font-size: 21px;
   }
 }
 
@@ -65,6 +82,7 @@
   input[type=password],
   input[type=tel],
   input[type=number],
+  input[type=search],
   textarea {
     border-top: hidden;
     border-right: hidden;
@@ -76,3 +94,23 @@
     }
   }
 }
+
+.input-list-double.spaced 
+.input-list.spaced {
+  //box-like
+  select,
+  input[type=text],
+  input[type=email],
+  input[type=password],
+  input[type=tel],
+  input[type=number],
+  input[type=search],
+  textarea {
+    & + label {
+      margin-top: 8px;
+    }
+  }
+}
+
+
+  
