--- a/app/views/restaurants/_new_item_single_select.html.erb
+++ b/app/views/restaurants/_new_item_single_select.html.erb
@@ -1,4 +1,4 @@
-<div class="wrapper input-list-double pad-y-lrg" id="single_select_mod_table">
+<div class="wrapper input-list-double spaced pad-y-lrg" id="single_select_mod_table">
   <label>Single Select</label>
   <div class="row-new">
     <%= text_field_tag :ss_title, nil, :placeholder=>"Options Title (type of bread, spicy level)" %>
@@ -10,6 +10,7 @@
   <%= text_field_tag :ss_price_2, nil, :type=>"number", :placeholder=>"Price 2" %>
   <%= text_field_tag :ss_name_3, nil, :placeholder=>"Option 3 Name" %>
   <%= text_field_tag :ss_price_3, nil, :type=>"number", :placeholder=>"Price 3" %>
+  <label>Hello World</label>
   <%= text_field_tag :ss_name_4, nil, :placeholder=>"Option 4 Name" %>
   <%= text_field_tag :ss_price_4, nil, :type=>"number", :placeholder=>"Price 4" %> 
   <%= text_field_tag :ss_name_5, nil, :placeholder=>"Option 5 Name" %>
