--- a/app/views/application/styleguide.html.erb
+++ b/app/views/application/styleguide.html.erb
@@ -247,15 +247,23 @@
         <hr>
         <span>.exanpadable and .expanded</span>
         <li>places the icon and makes it clickable</li>
-        <li>you have to add the javascript functionality</li>
-        <li>works on multiple elements</li>
+        <li>javascripts selects next element, of the regular flow</li>
         <hr>
 
-        <h6 class="SSS expandable">Header Style</h6>
+        <h6 class="expandable">Header Style</h6>
+        <div>Sample div. Not nested, just next in the flow</div>
+
         <p class="expandable">Hello Paragraph</p>
-        <p class="expandable expanded">Hello Expanded Paragraph</p>
-        <h1 class="SSS expandable">Header Style</h1>
-        <a href="#" class="expandable expanded">Why not on this link too</a>
+        <div>Sample div. Not nested, just next in the flow</div>
+
+        <h1 class="expandable plus-icon">h1.expandable.plus-icon</h1>
+        <p>Sample p. Not nested, just next in the flow</p>
+
+        <a href="#" class="expandable">Why not on this link too</a>
+        <div>Sample div. Not nested, just next in the flow</div>
+
+        <div class="expandable plus-icon span7 green text-khaki">div.expandable.plus-icon.span7.green.text-khaki</div>
+        <div class="my-well-mid">Sample div. Not nested, just next in the flow</div>
 
 
 
