--- a/app/assets/stylesheets/modules/_dropdown.scss
+++ b/app/assets/stylesheets/modules/_dropdown.scss
@@ -55,3 +55,46 @@
   background:#555;
   color: whitesmoke;
 }
+
+
+
+
+.expandable {
+  cursor: pointer;
+  position: relative;
+}
+
+.expandable:not(.plus-icon):before {
+  margin-right: 10px;
+  font-family: 'FontAwesome';
+  font-weight: normal;
+  content: '\f0da';
+}
+
+.expandable:not(.plus-icon).expanded:before {
+  font-family: 'FontAwesome';
+  font-weight: normal;
+  content: '\f0d7';
+}
+
+.plus-icon.expandable + * {
+  border-left: dotted 2px #444;
+  border-right: dotted 2px #444;
+  border-bottom: dotted 2px #444;
+}
+
+.plus-icon.expandable:after {
+  font-family: 'FontAwesome';
+  font-weight: normal;
+  content: '\f0ca';
+  position: absolute;
+  right: 10px;
+}
+
+.plus-icon.expandable.expanded:after {
+  font-family: 'FontAwesome';
+  font-weight: normal;
+  content: '\f0c0';
+  position: absolute;
+  right: 10px;
+}
