--- a/app/views/restaurants/analytics.html.erb
+++ b/app/views/restaurants/analytics.html.erb
@@ -9,7 +9,7 @@
 
 <div class="panel panel-primary">
 <h3 class="panel-heading">Average Order Time (Minutes)</h3>
-	<p align="center"><b><%= @avg_time %></b></p>
+	<p align="center"><b><%= @avg_time unless !@correct_data%></b></p>
 </div>
 
 <div class="panel panel-primary">
