--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -36,7 +36,7 @@
 	<div class="well">
 		<div style="padding-bottom:30px;">
 			<b> View Analytics </b> 
-			<%= button_to "View Analytics", analytics_restaurant_path(@restaurant), {:method => 'get', :class => "btn btn-primary"} %>
+			<%= @restaurant.orders.count == 0 ? "No order data available for analytics" : (button_to "View Analytics", analytics_restaurant_path(@restaurant), {:method => 'get', :class => "btn btn-primary"}) %>
 		</div>
 	</div>
 
