--- a/app/views/user_mailer/welcome_email.text.erb
+++ b/app/views/user_mailer/welcome_email.text.erb
@@ -1,9 +1,9 @@
-Welcome to example.com, <%= @user.name %>
+Welcome fellow Shnacker, <%= @user.name %>
 ===============================================
  
-You have successfully signed up to Shnackapp.com,
-your username is: <%= @user.email %>.
+You have successfully signed up to shnackapp.com,
+your username is: <%= @user.email %>
  
-To login to the site, just follow this link: <%= @url %>.
+To login to the site, just follow this link: <%= @url %>
  
 Thanks for joining and have a great day!
