--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,10 +31,10 @@
 
 <body >
 
-	<div class="wrapper wrap-website" id="top">
-		<div id="topbar" class="row-new topbar clear-fix">
+	<div class="wrap-level-1" id="top">
+		<header id="topbar" class="topbar">
 
-			<div class="span11 center">
+			<div class="row-new span11 center">
 				<a href="/"><h1 class="column two">Shnack</h1></a>
 
 				<div class="title_current_step column-mobile eight">
@@ -68,7 +68,7 @@
 					</div> 
 				<%end%>
 			</div>
-		</div> <!--ENDS TOPBAR-->
+		</header> <!--ENDS TOPBAR-->
 
 		<div class="flash-wrap">
 			<% if flash[:notice] %>
