--- a/app/assets/stylesheets/orders.css.scss
+++ b/app/assets/stylesheets/orders.css.scss
@@ -2,7 +2,9 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-table.subtotal {
+
+/* i believe all this code can be deleted 8.27 */
+/* table.subtotal {
 	background-color: rgb(245, 245, 245);
 	border-top-color: #DDD;
 	border-top-width: 1px;
@@ -24,4 +26,4 @@ table.subtotal {
 	background: pink;
 }
 
-
+*/
