--- a/app/assets/stylesheets/sign_in.css.scss
+++ b/app/assets/stylesheets/sign_in.css.scss
@@ -1,6 +1,6 @@
 /* I BELIEVE THIS IS ALL UNUSED NOW BN 8.6.14
 instead use input-list and push-btn */
-
+/*
 input.sign_in, textarea.sign_in {
 	padding: 9px;
 	border: solid 1px #E5E5E5;
@@ -13,9 +13,9 @@ input.sign_in, textarea.sign_in {
 	} 
 }
 input, textarea {
-  /*box-shadow: rgba(0,0,0, 0.1) 0px 0px 8px;
+  box-shadow: rgba(0,0,0, 0.1) 0px 0px 8px;
   -moz-box-shadow: rgba(0,0,0, 0.1) 0px 0px 8px;
-  -webkit-box-shadow: rgba(0,0,0, 0.1) 0px 0px 8px;*/
+  -webkit-box-shadow: rgba(0,0,0, 0.1) 0px 0px 8px;
   }
 
   .buttn {
@@ -28,3 +28,4 @@ input, textarea {
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   }
+*/
