--- a/app/views/restaurants/bank_account.html.erb
+++ b/app/views/restaurants/bank_account.html.erb
@@ -20,5 +20,5 @@
 
 <div> *Use the legal name on your account </div>
 
-<div class="error" style="display:none;"> There was an error with your bank information. Please make sure it is correct and try again. </div>
+<div class="flash-alert stop" style="display:none;"> There was an error with your bank information. Please make sure it is correct and try again. </div>
 
