--- a/app/views/application/styleguide.html.erb
+++ b/app/views/application/styleguide.html.erb
@@ -310,7 +310,34 @@
             <div class="column-mobile three blue">77 Hello there</div>
             <div class="column-mobile three green">88 Deep water</div>
         </div>
-    </div>
 
+        <hr>
+        <p>.item-list</p>
+        <li>.stripped</li>
+        <li>.border</li>
+        <hr>
+
+        <section class="item-list">
+            <div class="row-new">asfdjgk</div>
+            <div class="row-new">asfdjgk</div>
+            <div class="row-new">asfdjgk</div>
+            <div class="row-new">asfdjgk</div>
+        </section>
+
+        <section class="item-list stripped">
+            <div class="row-new">asfdjgk</div>
+            <div class="row-new">asfdjgk</div>
+            <div class="row-new">asfdjgk</div>
+            <div class="row-new">asfdjgk</div>
+        </section>
+
+        <section class="item-list border">
+            <div class="row-new">asfdjgk</div>
+            <div class="row-new">asfdjgk</div>
+            <div class="row-new">asfdjgk</div>
+            <div class="row-new">asfdjgk</div>
+    </section>
+
+    </div>
   </body>
   </html>
