--- a/app/assets/stylesheets/modules/item-list.css.scss
+++ b/app/assets/stylesheets/modules/item-list.css.scss
@@ -3,7 +3,7 @@
   padding: 5px;
   margin: 5px;
 
-  
+
   .row-new {
     font-size: 14px;
     padding: 9px;
@@ -18,6 +18,9 @@
   &.border {
     .row-new:not(:last-of-type) {
       border-bottom: 1px solid #444;
+    }
+    .row-new:not(:first-of-type) {
+      border-top: 1px solid #888;
     }
   }
 }
