expandable plus icon

--- a/app/assets/stylesheets/modules/_dropdown.scss
+++ b/app/assets/stylesheets/modules/_dropdown.scss
@@ -86,7 +86,7 @@
 .plus-icon.expandable:after {
   font-family: 'FontAwesome';
   font-weight: normal;
-  content: '\f0ca';
+  content: '\f0fe';
   position: absolute;
   right: 10px;
 }
@@ -94,7 +94,7 @@
 .plus-icon.expandable.expanded:after {
   font-family: 'FontAwesome';
   font-weight: normal;
-  content: '\f0c0';
+  content: '\f147';
   position: absolute;
   right: 10px;
 }
