--- a/app/views/application/styleguide.html.erb
+++ b/app/views/application/styleguide.html.erb
@@ -11,19 +11,20 @@
 
 <body>
   <div class="wrapper pad-lrg">
-      <span>h1..6 with SSS class (the styles to switch to)</span>
+      <hr>
+      <h1>h1..6</h1>
       <li>margin-bottom: 5px;</li>
       <hr>
 
-      <span>h1.SSS</span><h1 class="SSS">Hello world</h1>
-      <span>h2.SSS</span><h2 class="SSS">Welcome To Myy</h2>
-      <span>h3.SSS</span><h3 class="SSS">Shnack Attack</h3>
-      <span>h4.SSS</span><h4 class="SSS">Enjoy your stay</h4>
-      <span>h5.SSS</span><h5 class="SSS">come again</h5>
-      <span>h6.SSS</span><h6 class="SSS" >Hello world</h6>
+      <h1>Hello world</h1>
+      <h2>Welcome To Myy</h2>
+      <h3>Shnack Attack</h3>
+      <h4>Enjoy your stay</h4>
+      <h5>come again</h5>
+      <h6>Hello world</h6>
 
       <hr>
-      <span>Basic Paragraph tags</span>
+      <h1>Basic Paragraph tags</h1>
       <li>font-size: 22px;</li>
       <li>margin-bottom: 12px;</li>
       <hr>
@@ -32,7 +33,7 @@
       <p class="span6">Span6 Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem. Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum. Mirum est notare quam littera gothica, quam nunc putamus parum claram, anteposuerit litterarum formas humanitatis per seacula quarta decima et quinta decima. Eodem modo typi, qui nunc nobis videntur parum clari, fiant sollemnes in futurum.</p>
 
       <hr>
-      <span>Generic Button</span>
+      <h1>Generic Button</h1>
       <hr>
 
       <button class="">Button</button>
@@ -44,11 +45,14 @@
 
       <hr>
       <span>Generic Anchor and a.i-arrow (i-arrow is experimental)</span>
+      <span>add .basic-btn to links to immitate buttons</span>
       <hr>
 
       <a href="#">Anchor</a>
       <br>
       <a href="" class="i-arrow">Arrow Class</a>
+      <br>
+      <a class="basic-btn">Basic Button but it really is a link</a>
 
 
       <hr>
@@ -262,7 +266,7 @@
       <a href="#" class="expandable">Why not on this link too</a>
       <div>Sample div. Not nested, just next in the flow</div>
 
-      <div class="expandable plus-icon span7 green text-khaki">div.expandable.plus-icon.span7.green.text-khaki</div>
+      <div class="expandable plus-icon span7 green text-khaki pad-lrg">div.expandable.plus-icon.span7.green.text-khaki.pad-lrg</div>
       <div class="my-well-mid">Sample div. Not nested, just next in the flow</div>
 
 
