--- a/app/assets/stylesheets/base/_buttons.scss
+++ b/app/assets/stylesheets/base/_buttons.scss
@@ -15,7 +15,7 @@ a {
 }
 
 
-.basic_btn {
+.basic-btn {
   display: inline-block;
   font: normal 16px/100% "Dosis", Tahoma, sans-serif;
   font-weight: 500;
@@ -49,7 +49,7 @@ a {
 button,
 input[type="submit"],
 input[type="button"] {
-  @extend .basic_btn;
+  @extend .basic-btn;
 }
 
 /* override for rail helpers that are not button tags but are buttons */
