--- a/app/assets/stylesheets/modules/item-list.css.scss
+++ b/app/assets/stylesheets/modules/item-list.css.scss
@@ -1,7 +1,8 @@
 .item-list {
   //background-color: orange;
-  padding: 5px;
-  margin: 5px;
+  //padding: 5px;
+  //margin: 5px;
+  //border-left: solid 6px #999;
 
 
   .row-new {
